/*
    GSP for the TF blockchain game
    Copyright (C) 2020  Autonomous Worlds Ltd

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto2";
option cc_enable_arenas = true;

package pxd.proto;

message AuthoredActivityReward
{
  /*t*/
  optional uint32 Type = 1;
    
  /*gq*/
  optional uint32 GeneratedRecipeQuality = 2;
  
  /*cr*/
  optional string CraftedRecipeId = 3;  
  
  /*m*/
  optional string MoveId = 4;   

  /*ar*/
  optional uint32 ArmorType = 5;  

  /*an*/
  optional string AnimationId = 6;

  /*c*/
  optional string CandyType = 7;   

  /*lt*/
  optional string ListTableId = 8;

  /*q*/
  optional int64 Quantity = 9;   
  
  /*w*/
  optional uint32 Weight = 10;    
}

message ActivityReward
{
  /*Id*/
  optional string AuthoredId = 1;
    
  /*n*/
  optional string Name = 2;  
  
  /*r*/
  repeated AuthoredActivityReward Rewards = 3;  
}
